<resources>
    <string name="select_game">SELECT A GAME</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="asymmetrical">Asymmetric</string>
    <string name="english">English</string>
    <string name="diamond">Diamond</string>
    <string name="app_name">Peg Solitaire</string>
    <string name="game_over">Game Over!</string>
    <string name="restart">Restart</string>
    <string name="quit">Quit</string>
    <string name="game_menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="invalid_move">Invalid move!</string>
    <string name="pause">Pause</string>
    <string name="revert">Revert</string>
    <string name="resume">Resume</string>
    <string name="game_paused">Game Paused!</string>
    <string name="initial_french_game_score">.. / 36</string>
    <string name="initial_german_game_score">.. / 44</string>
    <string name="initial_asymmetric_score">.. / 38</string>
    <string name="initial_english_game_score">.. / 32</string>
    <string name="initial_diamond_game_score">.. / 40</string>
    <string name="initial_elapsed_time">.. : ..</string>
</resources>
